# youtube2ppt

./: .gitignore  README.md  config.json  main.py  pyproject.toml
docs/: video2ppt_网页版功能总结.md
gui/: __init__.py  app.py  main_window.py
ppt_pipeline/: __init__.py  config.py  crop_preview.py  download.py  evp_utils.py  extract.py  scene_extract.py
scripts/: README_param_sweep.md  run_scene_param_sweep.py
